tests/transpiler/x/hs/sort_stable.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/sort_stable.hs:15:10: error:
    • Ambiguous type variable ‘b0’ arising from a use of ‘sortOn’
      prevents the constraint ‘(Ord b0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘b0’ should be.
      Potentially matching instances:
        instance Ord Ordering -- Defined in ‘GHC.Classes’
        instance Ord Integer -- Defined in ‘GHC.Num.Integer’
        ...plus 23 others
        ...plus three instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the expression: sortOn (\ i -> i.n) [i.v | i <- items]
      In an equation for ‘result’:
          result = sortOn (\ i -> i.n) [i.v | i <- items]
   |
15 | result = sortOn (\i -> i.n) [i.v | i <- items]
   |          ^^^^^^

/workspace/mochi/tests/transpiler/x/hs/sort_stable.hs:15:24: error:
    • No instance for (GHC.Records.HasField "n" String b0)
        arising from selecting the field ‘n’
    • In the expression: i.n
      In the first argument of ‘sortOn’, namely ‘(\ i -> i.n)’
      In the expression: sortOn (\ i -> i.n) [i.v | i <- items]
   |
15 | result = sortOn (\i -> i.n) [i.v | i <- items]
   |                        ^^^
