tests/transpiler/x/hs/sort_stable.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
import Prelude hiding (n, v)
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
import Data.List (intercalate, isInfixOf, union, intersect, nub, sortOn, (\\))
data GenType1 = GenType1
  { n :: Int,
    v :: String
  } deriving (Show)


items = [GenType1 {n = 1, v = "a"}, GenType1 {n = 1, v = "b"}, GenType1 {n = 2, v = "c"}]

result = sortOn (\i -> i.n) [i.v | i <- items]

main :: IO ()
main = do
    print (result)
